--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "SoloPartner",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "fullcalendar": "^3.10.0",
+    "jquery": "^3.3.1",
+    "moment": "^2.24.0"
+  }
 }
